--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -17,15 +17,15 @@
 
 
 .advantages__title {
-  margin: 0 0 51px 0;
+  margin: 0 0 51px;
   text-align: center;
 
   @include vp-1365 {
-    margin: 0 0 20px 0;
+    margin: 0 0 20px;
   }
 
   @include vp-767 {
-    margin: 0 0 6px 0;
+    margin: 0 0 6px;
   }
 }
 
@@ -63,7 +63,6 @@
     grid-column: 1/2;
 
     @include vp-767 {
-
       .advantages__content {
         width: 230px;
       }
@@ -81,7 +80,7 @@
   &:last-child > :nth-child(2n) > :last-child {
     margin: 0 0 0 2px;
 
-    .advantages__description{
+    .advantages__description {
       @include vp-1365 {
         letter-spacing: -0.25px;
       }
@@ -99,6 +98,7 @@
 
     @include vp-767 {
       gap: 0;
+
       .advantages__content {
         width: 207px;
       }
@@ -108,6 +108,14 @@
   &:nth-child(2n + 1).advantages__card--center {
     gap: 30px;
     padding-bottom: 32px;
+
+    @include vp-1365 {
+      padding-bottom: 58px;
+    }
+
+    @include vp-767 {
+      padding-bottom: 39px;
+    }
   }
 
   &:nth-last-child(-n + 2) {
@@ -130,22 +138,11 @@
     }
   }
 
-  &:nth-child(2n + 1).advantages__card--center {
-    gap: 30px;
-    padding-bottom: 58px;
-  }
-
   @include vp-767 {
     gap: 0;
 
-    &:nth-child(2n + 1).advantages__card--center {
-      gap: 0;
-      padding-bottom: 39px;
-    }
-
     &:nth-last-child(-n + 2) > :nth-child(2n) > :first-child {
-      // letter-spacing: -0.1px;
-      margin: 11px 0 0 0;
+      margin: 11px 0 0;
     }
   }
 }
@@ -172,7 +169,7 @@
 
   @include vp-767 {
     line-height: 20px;
-    margin: 3px 0 0 0;
+    margin: 3px 0 0;
   }
 
   &:first-child {
@@ -221,13 +218,13 @@
   line-height: 22px;
 
   @include vp-1365 {
-    margin: 1px 0 0 0;
+    margin: 1px 0 0;
     font-size: 20px;
     letter-spacing: 0.25px;
   }
 
   @include vp-767 {
-    margin: 10px 0 0 0;
+    margin: 10px 0 0;
     font-size: 18px;
     line-height: 22px;
     letter-spacing: 0.25px;
@@ -259,7 +256,7 @@
   grid-template-columns: 1fr;
   gap: 30px;
   width: 360px;
-  margin: 0 auto 0;
+  margin: 0 auto;
   padding: 57px 25px 58px;
   color: $color-default-white;
   text-align: center;
@@ -308,7 +305,6 @@
     }
 
     .advantages__number span {
-
       &:first-child {
         letter-spacing: 0.15px;
       }
@@ -331,8 +327,8 @@
     }
 
     .advantages__unit {
-      padding: 0 0 0 0;
-      margin: 6px 0 0 0;
+      padding: 0;
+      margin: 6px 0 0;
       font-size: 22px;
       line-height: 22px;
       letter-spacing: 0.25px;
