--- a/source/sass/blocks/card-list.scss
+++ b/source/sass/blocks/card-list.scss
@@ -24,7 +24,7 @@
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  padding: 58px 20px 58px 20px;
+  padding: 58px 20px;
   text-align: center;
   background-color: $color-default-white;
   border: 7px solid rgba(232, 232, 232, 0);
@@ -32,12 +32,12 @@
 
   @include vp-1365 {
     width: 380px;
-    padding: 57px 20px 58px 20px;
+    padding: 57px 20px 58px;
   }
 
   @include vp-767 {
     width: 290px;
-    padding: 42px 20px 43px 20px;
+    padding: 42px 20px 43px;
   }
 }
 
