--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -93,7 +93,7 @@
   width: 230px;
   margin: 17px auto 0;
   user-select: none;
-  padding: 27px 20px 26px 20px;
+  padding: 27px 20px 26px;
 
   @include vp-1365 {
     margin: 22px auto 0;
