--- a/source/sass/blocks/discounts-card.scss
+++ b/source/sass/blocks/discounts-card.scss
@@ -37,7 +37,7 @@
       margin-top: 40px;
 
       .discounts-card__description {
-        margin: 10px auto 5px auto;
+        margin: 10px auto 5px;
         padding: 0;
       }
     }
@@ -46,7 +46,7 @@
       margin-top: 30px;
 
       .discounts-card__description {
-        margin: 10px auto 5px auto;
+        margin: 10px auto 5px;
         padding: 0;
       }
     }
@@ -58,7 +58,7 @@
   flex-direction: column;
   gap: 11px;
   height: 100%;
-  padding: 20px 20px 20px 20px;
+  padding: 20px;
 
   @include vp-1365 {
     padding: 17px 20px 20px;
@@ -196,7 +196,7 @@
   line-height: 68px;
 
   @include vp-1365 {
-    margin: 0 0 20px 0;
+    margin: 0 0 20px;
     line-height: 46px;
   }
 
@@ -249,7 +249,7 @@
   display: block;
   width: fit-content;
   margin-top: auto;
-  padding: 7px 0 5px 0;
+  padding: 7px 0 5px;
   font-size: 14px;
   font-weight: 700;
   line-height: 14px;
