--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -21,6 +21,7 @@
 
   @include vp-767 {
     margin-bottom: 34px;
+
     // letter-spacing: 1px;
   }
 }
@@ -83,7 +84,7 @@
 
 .faq__button {
   max-width: none;
-  padding: 21px 20px 16px;;
+  padding: 21px 20px 16px;
   font-size: 18px;
   font-weight: 400;
   line-height: 17px;
@@ -104,7 +105,7 @@
   }
 
   @include vp-767 {
-    padding: 14px 20px 14px;
+    padding: 14px 20px;
     font-size: 16px;
     line-height: 18px;
   }
