--- a/source/sass/blocks/filter-list.scss
+++ b/source/sass/blocks/filter-list.scss
@@ -10,7 +10,7 @@
   border-bottom: 2px solid rgba(120, 120, 120, 0.2);
 
   @include vp-1365 {
-    gap: 0px 0px;
+    gap: 0 0;
     margin-bottom: 43px;
   }
 
@@ -25,7 +25,7 @@
   z-index: 1;
   display: block;
   margin: 0 0 -2px;
-  padding: 10px 0 8px 0;
+  padding: 10px 0 8px;
   font-family: $font-roboto;
   font-size: 20px;
   line-height: 20px;
