--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -5,11 +5,10 @@
 
   @include vp-1365 {
     padding: 42px 0 45px;
-
   }
 
   @include vp-767 {
-    padding: 40px 0 40px;
+    padding: 40px 0;
   }
 }
 
