--- a/source/sass/blocks/free.scss
+++ b/source/sass/blocks/free.scss
@@ -4,7 +4,7 @@
   background-color: $color-main;
 
   @include vp-1365 {
-    padding: 65px 119px 20px 119px;
+    padding: 65px 119px 20px;
   }
 
   @include vp-767 {
@@ -53,10 +53,10 @@
 .free__button {
   grid-column: 1 / -1;
   max-width: none;
-  padding: 28px 20px 25px 20px;
+  padding: 28px 20px 25px;
 
   @include vp-767 {
-    padding: 24px 20px 23px 20px;
+    padding: 24px 20px 23px;
     margin-top: 10px;
     grid-column: 1/3;
     grid-row: 3/4;
