--- a/source/sass/blocks/games.scss
+++ b/source/sass/blocks/games.scss
@@ -2,7 +2,7 @@
   padding: 100px 0 60px;
 
   @include vp-1365 {
-    padding: 60px 0 60px;
+    padding: 60px 0;
   }
 
   @include vp-767 {
@@ -31,7 +31,7 @@
   grid-template-columns: 107px 1fr;
   gap: 29px 138px;
   align-content: start;
-  padding: 60px 80px 80px 80px;
+  padding: 60px 80px 80px;
   color: $color-default-white;
   background-color: $color-main-contrast;
 
@@ -46,7 +46,7 @@
     grid-column: 1/2;
     grid-row: 1/2;
     gap: 12px 47px;
-    padding: 40px 40px 40px 40px;
+    padding: 40px;
   }
 }
 
@@ -63,7 +63,7 @@
   }
 
   @include vp-1365 {
-    margin: 0 0 0 0;
+    margin: 0;
     font-size: 46px;
     line-height: 54px;
     letter-spacing: 1px;
@@ -72,13 +72,14 @@
 
   @include vp-767 {
     font-size: 46px;
+
     // letter-spacing: 2.4px;
   }
 }
 
 .games__description {
   grid-column: 1 / -1;
-  margin: 0 0 0 0;
+  margin: 0;
   font-size: 18px;
   font-weight: 300;
   line-height: 22px;
@@ -97,7 +98,7 @@
   }
 
   @include vp-767 {
-    margin: 4px 0 0 0;
+    margin: 4px 0 0;
     width: 173px;
     font-size: 16px;
     line-height: 20px;
@@ -131,20 +132,20 @@
 .games__button {
   grid-column: 1 / -1;
   max-width: none;
-  margin: 3px 0 0 0;
-  padding: 28px 20px 25px 20px;
+  margin: 3px 0 0;
+  padding: 28px 20px 25px;
 
   @media (width >= 1366px) {
     order: 4;
   }
 
   @include vp-1365 {
-    margin: -1px 0 0 0;
+    margin: -1px 0 0;
   }
 
   @include vp-767 {
-    margin: 4px 0 0 0;
-    padding: 24px 20px 23px 20px;
+    margin: 4px 0 0;
+    padding: 24px 20px 23px;
   }
 }
 
