--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -1,12 +1,12 @@
 .gym {
-  padding: 114px 0 125px 0;
+  padding: 114px 0 125px;
 
   @include vp-1365 {
-    padding: 49px 0 37px 0;
+    padding: 49px 0 37px;
   }
 
   @include vp-767 {
-    padding: 35px 0 40px 0;
+    padding: 35px 0 40px;
   }
 }
 
@@ -47,7 +47,7 @@
 }
 
 .gym__title {
-  margin: 6px 0 26px 0;
+  margin: 6px 0 26px;
   font-size: 54px;
   line-height: 54px;
   letter-spacing: 0.1px;
@@ -55,7 +55,7 @@
   font-weight: 600;
 
   @include vp-1365 {
-    margin: 6px 0 0 0;
+    margin: 6px 0 0;
     font-size: 42px;
   }
 
@@ -73,7 +73,7 @@
   line-height: 22px;
 
   @include vp-1365 {
-    margin: 13px 0 36px 0;
+    margin: 13px 0 36px;
     font-size: 20px;
     line-height: 20px;
   }
@@ -165,7 +165,7 @@
   height: 100%;
 
   @include vp-767 {
-    margin: 2px 0 0 0;
+    margin: 2px 0 0;
   }
 }
 
