--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -69,12 +69,13 @@
     margin-right: 0;
     font-size: 32px;
     line-height: 32px;
+
     // letter-spacing: 0.84px;
   }
 }
 
 .hero h1 {
-  margin: 1px 0 0 0;
+  margin: 1px 0 0;
   font-family: $font-alumni-extrabold;
   font-size: 92px;
   font-weight: 800;
@@ -84,10 +85,10 @@
   letter-spacing: 4px;
 
   @include vp-1365 {
-    margin: 0 0 0 0;
+    margin: 0;
     font-size: 72px;
     line-height: 85px;
-   letter-spacing: 1.5px;
+    letter-spacing: 1.5px;
   }
 
   @include vp-767 {
@@ -101,7 +102,7 @@
   align-self: end;
   order: -1;
   margin: 0;
-  padding: 52px 0 71px 0;
+  padding: 52px 0 71px;
   font-family: $font-roboto;
   font-size: 14px;
   line-height: 22px;
@@ -109,7 +110,7 @@
   list-style: none;
 
   @include vp-1365 {
-    padding: 24px 0 24px 0;
+    padding: 24px 0;
   }
 
   @include vp-767 {
@@ -135,13 +136,13 @@
   grid-column: 1/-1;
   max-width: 270px;
   margin: 0 0 0 auto;
-  padding: 27px 20px 24px 20px;
+  padding: 27px 20px 24px;
   letter-spacing: -0.15px;
 
   @include vp-1365 {
     width: 186px;
     margin: 42px 0 0 auto;
-    padding: 22px 20px 21px 20px;
+    padding: 22px 20px 21px;
   }
 
   @include vp-767 {
