--- a/source/sass/blocks/reviews-card.scss
+++ b/source/sass/blocks/reviews-card.scss
@@ -51,7 +51,7 @@
 @include vp-1365 {
   .reviews-card {
     column-gap: 40px;
-    padding: 40px 30px 40px 30px;
+    padding: 40px 30px;
   }
 
   .reviews-card.swiper-slide {
@@ -95,7 +95,7 @@
     margin: 0;
 
     @include vp-1365 {
-      margin: 2px 0 0 0;
+      margin: 2px 0 0;
       font-size: 21px;
       letter-spacing: 0.5px;
     }
@@ -103,7 +103,7 @@
 
   .reviews-card__description {
     font-family: $font-roboto-light;
-    margin: 20px 0 0 0;
+    margin: 20px 0 0;
     max-width: 310px;
     font-weight: 300;
     font-size: 16px;
@@ -120,7 +120,7 @@
     justify-content: space-between;
     width: 226px;
     margin: 0 auto;
-    padding: 30px 28px 28px 28px;
+    padding: 30px 28px 28px;
     row-gap: 0;
     text-align: center;
 
