--- a/source/sass/blocks/subscription.scss
+++ b/source/sass/blocks/subscription.scss
@@ -2,7 +2,7 @@
   position: relative;
   z-index: 1;
   overflow: unset;
-  padding: 100px 0 100px;
+  padding: 100px 0;
   background-color: #f8f9fc;
 
   &::before {
