--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -50,7 +50,6 @@
   margin: 6px 0 26px;
   font-size: 54px;
   line-height: 54px;
-  letter-spacing: 0.1px;
   font-family: $font-alumni-semibold;
   font-weight: 600;
 
@@ -91,7 +90,7 @@
   font-size: 16px;
   font-weight: 300;
   line-height: 24px;
-  letter-spacing: -0.1px;
+  letter-spacing: -0.17px;
 
   & + & {
     margin-top: 8px;
@@ -135,20 +134,20 @@
   bottom: 0;
   left: -38px;
   display: block;
-  width: 49.95%;
+  width: 360px;
 
   @include vp-1365 {
     left: 50%;
     top: 296px;
     transform: translateX(-50%);
-    width: 39.75%;
+    width: 270px;
   }
 
   @include vp-767 {
     position: relative;
     inset: auto;
     transform: none;
-    width: 100%;
+    width: 320px;
     margin: 0 auto;
   }
 
