--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -2,6 +2,10 @@
   padding-bottom: 120px;
   color: $color-default-white;
   margin: 0 auto;
+  position: relative;
+  background-color: $color-main-light2;
+  background-image: $gradient-hero;
+  // margin-top: -28px;
 
   @include vp-1365 {
     padding-bottom: 100px;
@@ -10,13 +14,26 @@
   @include vp-767 {
     padding-bottom: 33px;
   }
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: $color-main-light2;
+    background-image: $gradient-hero;
+    z-index: -1;
+  }
 }
 
 .hero__wrapper {
   width: 941px;
-  margin: 28px 0 0 147px;
+  margin: 0 auto 0 auto;
+  padding-top: 28px;
   display: grid;
-  grid-template-columns: 385px auto;
+  grid-template-columns: 421px auto;
   gap: 56px;
 
   @include vp-1365 {
@@ -34,7 +51,7 @@
 
 .hero__content {
   display: grid;
-  grid-template-columns: 114px 1fr;
+  grid-template-columns: 151px 1fr;
   gap: 40px 21px;
   align-content: start;
   padding-top: 52px;
@@ -98,7 +115,7 @@
   }
 }
 
-.hero__content ul {
+.hero-list {
   align-self: end;
   order: -1;
   margin: 0;
