--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -3,4 +3,14 @@
   background-color: $color-main-light2;
   background-image: $gradient-hero;
   margin: 0 auto;
+  position: relative;
+  z-index: 2; // Добавляем z-index для правильного наложения
+
+  @include vp-1365 {
+    padding: 0;
+  }
+
+  @include vp-767 {
+    padding: 0;
+  }
 }
