--- a/source/sass/blocks/card-list.scss
+++ b/source/sass/blocks/card-list.scss
@@ -2,20 +2,21 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 40px;
-  width: 100%;
-  margin: 0;
+  max-width: 1160px;
+  width: 1160px;
+  margin: 0 auto;
   padding: 0;
   list-style-type: none;
 
   @include vp-1365 {
     grid-template-columns: 1fr;
     gap: 40px;
-    margin: 45px 0 5px;
+    max-width: 442px;
   }
 
   @include vp-767 {
     gap: 35px;
-    margin: 30px 0 5px;
+    max-width: 290px;
   }
 }
 
@@ -23,40 +24,30 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
-  padding: 58px 20px;
+  margin: 0;
+  padding: 57px 20px 60px;
   text-align: center;
   background-color: $color-default-white;
-  border: 7px solid rgba(232, 232, 232, 0);
-  width: 360px;
+  border: 7px solid transparent;
+  width: 100%;
 
   @include vp-1365 {
-    width: 380px;
-    padding: 57px 20px 58px;
-  }
-
-  @include vp-767 {
-    width: 290px;
-    padding: 42px 20px 43px;
-  }
-}
-
-.card-list__item:hover,
-.card-list__item:focus-within {
-  padding: 61px 20px 58px;
-
-  border: 7px solid;
-  border-image: linear-gradient(97deg, rgba(237, 2, 51, 1) 17.6%, rgba(0, 62, 183, 1) 95.31%);
-  border-image-slice: 1;
-
-  .card__button {
-    color: $color-default-white;
-    background-color: $color-main;
-    background-image: $gradient;
-    box-shadow: none;
+    padding: 56px 20px 60px;
   }
 
   @include vp-767 {
     padding: 42px 20px 43px;
+  }
+
+  &:hover,
+  &:focus-within {
+    padding: 56px 20px 60px;
+    border: 7px solid;
+    border-image: linear-gradient(97deg, rgba(237, 2, 51, 1) 17.6%, rgba(0, 62, 183, 1) 95.31%);
+    border-image-slice: 1;
+
+    @include vp-767 {
+      padding: 42px 20px 43px;
+    }
   }
 }
