--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -1,42 +1,52 @@
 .card__title {
-  margin: 0 0 20px;
+  margin: 0 0 15px;
   font-size: 26px;
   font-weight: 700;
-  line-height: 26px;
+  line-height: 29px;
+  letter-spacing: 0.15px;
   text-align: center;
 
   @include vp-1365 {
+    margin: 0 0 10px;
     font-size: 24px;
-    margin: 0 0 24px;
+    line-height: 24px;
   }
 
   @include vp-767 {
+    margin: 0 0 8px;
     font-size: 22px;
-    margin: 0 0 18px;
+    line-height: 24px;
   }
 }
 
 .card__description {
-  margin: 0;
+  margin: 0 0 90px;
   font-size: 16px;
   font-weight: 300;
-  line-height: 18px;
+  line-height: 24px;
+
+  @include vp-1365 {
+    margin: 0 0 70px;
+  }
 
   @include vp-767 {
+    margin: 0 0 55px;
     font-size: 14px;
+    line-height: 22px;
   }
 }
 
 .card__price-wrapper {
   position: relative;
-  padding: 80px 0 0;
+  padding: 0;
+  margin: 0 0 29px;
 
   @include vp-1365 {
-    padding: 85px 0 0;
+    margin: 0 0 38px;
   }
 
   @include vp-767 {
-    padding: 57px 0 10px;
+    margin: 0 0 30px;
   }
 }
 
@@ -44,65 +54,71 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: flex-start;
   margin: 0 auto;
   position: relative;
   z-index: 1;
-  font-size: 60px;
-  font-weight: 700;
-  line-height: 90px;
+  font-size: 62px;
+  font-weight: 600;
+  line-height: 64px;
   color: $color-main-lignt;
+  gap: 17px;
 
-  span {
-    letter-spacing: -0.5px;
-    color: $color-main;
+  .card__price-count {
+    font-family: $font-roboto-bold;
+    letter-spacing: -1.75px;
+    margin: 1px 0 0 0;
   }
 
   .card__price-rub {
-    padding-left: 11px;
     display: block;
+    width: 30px;
+    // padding-left: 11px;
   }
 
   @include vp-767 {
     font-size: 48px;
-    letter-spacing: -0.5px;
+    line-height: 48px;
+
+    .card__price-rub {
+      font-size: 36px;
+      line-height: 36px;
+    }
   }
 }
 
 .card__shadow {
   position: absolute;
-  bottom: 16%;
+  bottom: 12px;
   left: 50%;
   transform: translateX(-50%);
   font-size: 100px;
   font-weight: 700;
   line-height: 100px;
+  letter-spacing: 1.25px;
   color: #e8e8e8;
-
-  @include vp-1365 {
-    bottom: 15%;
-  }
+  opacity: 0.48;
 
   @include vp-767 {
     font-size: 80px;
-    bottom: 20%;
+    line-height: 80px;
+    bottom: -10px;
   }
 }
 
 .card__button {
   display: block;
   width: 230px;
-  margin: 17px auto 0;
+  margin: 0 auto;
+  padding: 27px 20px 26px 20px;
   user-select: none;
-  padding: 27px 20px 26px;
 
   @include vp-1365 {
-    margin: 22px auto 0;
-    max-width: 250px;
-    width: 250px;
+    width: 206px;
   }
 
   @include vp-767 {
-    margin: 0 auto;
-    width: 206px;
+    width: 100%;
+    max-width: 206px;
   }
 }
