--- a/source/sass/blocks/subscription.scss
+++ b/source/sass/blocks/subscription.scss
@@ -1,33 +1,62 @@
 .subscription {
-  position: relative;
-  z-index: 1;
-  overflow: unset;
-  padding: 100px 0;
+  padding: 100px 0 98px;
   background-color: #f8f9fc;
 
-  &::before {
-    position: absolute;
-    content: "";
-    right: 0;
-    bottom: -11%;
-    width: 308px;
-    height: 384px;
-    background-image: url("../img/weight-plates.webp");
-    background-repeat: no-repeat;
-    background-position: left;
+
+  .subscription__container {
+    position: relative;
+    z-index: 1;
+    max-width: 1200px;
+    margin: 0 auto;
+
+    &::before {
+      position: absolute;
+      content: "";
+      right: -251px;
+      bottom: -146px;
+      width: 471px;
+      height: 494px;
+      background-image: url("../img/weight-plates.webp");
+      background-repeat: no-repeat;
+      background-position: left;
+      background-size: contain;
+    }
+
   }
 
   @include vp-1365 {
-    padding: 61px 0 105px;
+    padding: 100px 0 70px;
 
-    &::before {
-      right: 281px;
-      bottom: -7.35%;
+    // &::before {
+    //   right: 0;
+    //   bottom: 50px;
+    //   width: 347px;
+    //   height: 444px;
+    // }
+
+    .subscription__container {
+      position: relative;
+      z-index: 1;
+      max-width: 768px;
+      margin: 0 auto;
+
+      &::before {
+        position: absolute;
+        content: "";
+        right: -251px;
+        bottom: -146px;
+        width: 347px;
+        height: 444px;
+        background-image: url("../img/weight-plates.webp");
+        background-repeat: no-repeat;
+        background-position: left;
+        background-size: contain;
+      }
     }
   }
 
   @include vp-767 {
-    padding: 40px 0 70px;
+    padding: 70px 0 30px;
 
     &::before {
       display: none;
@@ -36,10 +65,12 @@
 }
 
 .subscription__title {
-  margin-bottom: 10px;
+  margin: 0 auto 10px;
   text-align: center;
+  max-width: 1160px;
 
   @include vp-1365 {
+    margin-bottom: 39px;
     letter-spacing: -0.1px;
   }
 
@@ -47,4 +78,9 @@
     margin-bottom: 30px;
     line-height: 33px;
   }
+}
+
+.subscription__wrapper {
+  max-width: 1160px;
+  margin: 0 auto;
 }
