--- a/source/sass/blocks/judges.scss
+++ b/source/sass/blocks/judges.scss
@@ -12,8 +12,10 @@
 
 .judges__title {
   margin: 0 auto 46px;
-
-  // letter-spacing: 4px;
+  padding: 0 0 0 1px;
+  font-family: $font-alumni-semibold;
+  font-weight: 600;
+  letter-spacing: 0.25px;
   width: max-content;
 
   @include vp-1365 {
