--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -85,11 +85,13 @@
 .faq__button {
   max-width: none;
   padding: 21px 20px 16px;
+  font-family: $font-roboto-light;
+  text-align: center;
   font-size: 18px;
   font-weight: 400;
   line-height: 17px;
   text-transform: none;
-  letter-spacing: normal;
+  letter-spacing: 0.15px;
   box-shadow: 0 0 0 2px rgba($color-main, 0.2) inset;
 
   &:hover,
