--- a/source/sass/blocks/games.scss
+++ b/source/sass/blocks/games.scss
@@ -51,7 +51,7 @@
 }
 
 .games__title {
-  margin: 0 0 0 0;
+  margin: 0;
   font-family: $font-alumni-semibold;
   font-size: 82px;
   font-weight: 600;
