--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -67,12 +67,13 @@
   .card__price-count {
     font-family: $font-roboto-bold;
     letter-spacing: -1.75px;
-    margin: 1px 0 0 0;
+    margin: 1px 0 0;
   }
 
   .card__price-rub {
     display: block;
     width: 30px;
+
     // padding-left: 11px;
   }
 
@@ -110,7 +111,7 @@
   display: block;
   width: 230px;
   margin: 0 auto;
-  padding: 27px 20px 26px 20px;
+  padding: 27px 20px 26px;
   user-select: none;
 
   @include vp-1365 {
