--- a/source/sass/blocks/filter-list.scss
+++ b/source/sass/blocks/filter-list.scss
@@ -1,42 +1,29 @@
 .filter-list {
   display: flex;
   flex-wrap: wrap;
-  // gap: 50px;
   justify-content: space-between;
-  // width: fit-content;
   width: 350px;
   margin: 0 auto 40px;
-  padding: 0 0 0 0;
+  padding: 0;
   list-style-type: none;
   border-bottom: 2px solid rgba(120, 120, 120, 0.2);
 
   @include vp-1365 {
-    // gap: 54px;
     margin-bottom: 43px;
     padding-bottom: 12px;
   }
 
   @include vp-767 {
-    // gap: 45px;
     margin-bottom: 34px;
     padding-bottom: 13px;
   }
 }
 
-// .filter-list__item {
-//   &:first-of-type {
-//     margin: 0 0 0 0;
-//   }
-//   &:last-of-type {
-//     margin: 0 0 0 0;
-//   }
-// }
-
 .filter-list__link {
   position: relative;
   display: block;
   margin: 0;
-  padding: 10px 0 6px 0;
+  padding: 10px 0 6px;
   font-family: $font-roboto;
   font-size: 20px;
   line-height: 20px;
@@ -56,25 +43,6 @@
   @include vp-767 {
     font-size: 16px;
     line-height: 16px;
-  }
-
-  &.is-active {
-    position: relative;
-
-
-    &::before {
-      position: absolute;
-      content: "";
-      display: block;
-      bottom: -4px;
-      left: 0;
-      width: 100%;
-      height: 1px;
-      background-color: $color-main-contrast;
-      z-index: 10;
-    }
-    // color: $color-main;
-    // border-bottom-color: $color-main-contrast;
   }
 
   &:hover {
@@ -102,8 +70,21 @@
 }
 
 .filter-list__link.is-active {
+  position: relative;
   color: $color-main;
   border-bottom-color: $color-main-contrast;
+
+  &::before {
+    position: absolute;
+    content: "";
+    display: block;
+    bottom: -4px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: $color-main-contrast;
+    z-index: 10;
+  }
 }
 
 @include vp-1365 {
