--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -5,6 +5,7 @@
   position: relative;
   background-color: $color-main-light2;
   background-image: $gradient-hero;
+
   // margin-top: -28px;
 
   @include vp-1365 {
@@ -30,7 +31,7 @@
 
 .hero__wrapper {
   width: 941px;
-  margin: 0 auto 0 auto;
+  margin: 0 auto;
   padding-top: 28px;
   display: grid;
   grid-template-columns: 421px auto;
