--- a/source/sass/blocks/judges-card.scss
+++ b/source/sass/blocks/judges-card.scss
@@ -52,7 +52,7 @@
   grid-column: 1 / -1;
   grid-row: 1 / 2;
   margin: 0;
-  padding: 25px 25px 25px 25px;
+  padding: 25px;
   font-size: 22px;
   font-weight: 400;
   line-height: 21px;
