--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -39,8 +39,9 @@
 
   @include vp-1365 {
     margin: 0 auto;
+    padding-top: 1px;
     width: 678px;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 324px 1fr;
     gap: 29px;
   }
 
@@ -58,6 +59,7 @@
   padding-top: 52px;
 
   @include vp-1365 {
+    grid-template-columns: 126px 1fr;
     gap: 8px 15px;
     padding-top: 33px;
   }
@@ -80,20 +82,18 @@
   @include vp-1365 {
     margin-right: 0;
     font-size: 42px;
-    line-height: 42px;
+    line-height: 40px;
   }
 
   @include vp-767 {
     margin-right: 0;
     font-size: 32px;
     line-height: 32px;
-
-    // letter-spacing: 0.84px;
   }
 }
 
 .hero h1 {
-  margin: 1px 0 0;
+  margin: 1px 0 0 0;
   font-family: $font-alumni-extrabold;
   font-size: 92px;
   font-weight: 800;
@@ -103,10 +103,10 @@
   letter-spacing: 4px;
 
   @include vp-1365 {
-    margin: 0;
+    margin: 2px 0 0 0;
     font-size: 72px;
     line-height: 85px;
-    letter-spacing: 1.5px;
+    letter-spacing: 1.65px;
   }
 
   @include vp-767 {
@@ -128,7 +128,7 @@
   list-style: none;
 
   @include vp-1365 {
-    padding: 24px 0;
+    padding: 24px 13px 24px 0;
   }
 
   @include vp-767 {
@@ -155,6 +155,8 @@
   max-width: 270px;
   margin: 0 0 0 auto;
   padding: 27px 20px 24px;
+  font-family: $font-roboto-bold;
+  font-weight: 600;
   letter-spacing: -0.15px;
 
   @include vp-1365 {
