--- a/source/sass/blocks/card-list.scss
+++ b/source/sass/blocks/card-list.scss
@@ -11,7 +11,8 @@
   @include vp-1365 {
     grid-template-columns: 1fr;
     gap: 40px;
-    max-width: 442px;
+    max-width: 380px;
+    margin: 0 auto;
   }
 
   @include vp-767 {
@@ -32,7 +33,7 @@
   width: 100%;
 
   @include vp-1365 {
-    padding: 56px 20px 60px;
+    padding: 58px 20px 58px;
   }
 
   @include vp-767 {
