--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -7,7 +7,7 @@
   text-align: center;
 
   @include vp-1365 {
-    margin: 0 0 10px;
+    margin: 0 0 22px;
     font-size: 24px;
     line-height: 24px;
   }
@@ -26,7 +26,7 @@
   line-height: 24px;
 
   @include vp-1365 {
-    margin: 0 0 70px;
+    margin: 0 0 94px;
   }
 
   @include vp-767 {
@@ -42,7 +42,7 @@
   margin: 0 0 29px;
 
   @include vp-1365 {
-    margin: 0 0 38px;
+    margin: 0 0 35px;
   }
 
   @include vp-767 {
@@ -64,17 +64,32 @@
   color: $color-main-lignt;
   gap: 17px;
 
+  @include vp-1365 {
+    gap: 18px;
+  }
+
+  @include vp-767 {
+    gap: 18px;
+  }
+
   .card__price-count {
     font-family: $font-roboto-bold;
     letter-spacing: -1.75px;
-    margin: 1px 0 0;
+    margin: 1px 0 0 0;
+
+    @include vp-1365 {
+      letter-spacing: -1.55px;
+      margin: 1px 0 0 2px;
+    }
+
+    @include vp-767 {
+      letter-spacing: -1.75px;
+    }
   }
 
   .card__price-rub {
     display: block;
     width: 30px;
-
-    // padding-left: 11px;
   }
 
   @include vp-767 {
@@ -100,6 +115,10 @@
   color: #e8e8e8;
   opacity: 0.48;
 
+  @include vp-1365 {
+    bottom: 11px;
+  }
+
   @include vp-767 {
     font-size: 80px;
     line-height: 80px;
@@ -115,7 +134,8 @@
   user-select: none;
 
   @include vp-1365 {
-    width: 206px;
+    max-width: 300px;
+    width: 250px;
   }
 
   @include vp-767 {
