--- a/source/sass/blocks/games.scss
+++ b/source/sass/blocks/games.scss
@@ -62,10 +62,10 @@
   }
 
   @include vp-1365 {
-    margin: 0;
+    margin: 0 0 0 0;
     font-size: 46px;
     line-height: 54px;
-    letter-spacing: 1px;
+    letter-spacing: 0.95px;
     width: 106px;
   }
 
@@ -139,7 +139,7 @@
   }
 
   @include vp-1365 {
-    margin: -1px 0 0;
+    margin: 0 0 0;
   }
 
   @include vp-767 {
