--- a/source/sass/blocks/discounts-card.scss
+++ b/source/sass/blocks/discounts-card.scss
@@ -13,6 +13,16 @@
 
     &:nth-of-type(2n) {
       margin-top: 5px;
+
+      .discounts-card__title {
+        font-size: 24px;
+        line-height: 31px;
+        letter-spacing: 1.05px;
+      }
+
+      .discounts-card__content {
+        gap: 8px;
+      }
     }
 
     &:first-of-type {
@@ -22,6 +32,15 @@
 
     &:last-of-type {
       margin-top: 5px;
+
+      .discounts-card__title {
+        font-size: 24px;
+        line-height: 31px;
+      }
+
+      .discounts-card__content {
+        gap: 8px;
+      }
     }
   }
 
@@ -85,7 +104,8 @@
     padding: 40px 44px 40px 45px;
 
     @include vp-1365 {
-      padding: 37px 42px 39px 25px;
+      gap: 30px;
+      padding: 37px 42px 40px 25px;
     }
 
     @include vp-767 {
@@ -102,7 +122,8 @@
 
     @include vp-1365 {
       width: 191px;
-      margin-top: 5px;
+      margin: 12px 0 122px 0;
+      padding-bottom: 0;
     }
 
     @include vp-767 {
@@ -115,8 +136,9 @@
     color: $color-default-white;
 
     @include vp-1365 {
+      min-width: 74px;
       margin-top: 0;
-      padding: 10px 0 5px;
+      padding: 9px 0 5px;
     }
 
     @include vp-767 {
@@ -128,11 +150,6 @@
   @include vp-1365 {
     grid-row: 1/ 2;
     grid-column: 1 /2;
-
-    .discounts-card__description {
-      margin-bottom: 122px;
-      padding-bottom: 0;
-    }
   }
 
   @include vp-767 {
@@ -176,9 +193,12 @@
   line-height: 26px;
 
   @include vp-1365 {
-    font-size: 24px;
-    line-height: 32px;
-    letter-spacing: 1.1px;
+    margin: 0 0 0 1px;
+    font-size: 22px;
+    line-height: 30px;
+    letter-spacing: 1.25px;
+
+
   }
 
   @include vp-767 {
@@ -196,8 +216,10 @@
   line-height: 68px;
 
   @include vp-1365 {
-    margin: 0 0 20px;
-    line-height: 46px;
+    margin: -13px 0 0 1px;
+    font-size: 68px;
+    line-height: 68px;
+    letter-spacing: 1.65px;
   }
 
   @include vp-767 {
@@ -298,7 +320,8 @@
   }
 
   @include vp-1365 {
-    padding: 9px 0 5px;
+    min-width: 74px;
+    padding: 8px 0 5px;
   }
 
   @include vp-767 {
