--- a/source/sass/blocks/accordion.scss
+++ b/source/sass/blocks/accordion.scss
@@ -41,6 +41,8 @@
 }
 
 .accordion__description {
+  font-family: $font-roboto-light;
+  font-size: 18px;
   max-width: 610px;
   padding: 19px 0 22px;
   line-height: 24px;
@@ -84,6 +86,10 @@
   transform: rotate(90deg);
 }
 
+.accordion__description p br {
+  display: block;
+}
+
 @include vp-1365 {
   .accordion {
     margin: 0;
@@ -93,13 +99,35 @@
     padding: 23px 0;
   }
 
+  .accordion-item:nth-child(2n) .accordion__button-wrapper {
+    padding: 24px 0 22px;
+  }
+
+  .accordion-item:nth-last-child(2n) .accordion__button-wrapper {
+    padding: 23px 0 23px;
+  }
+
+  .accordion-item:nth-child(2n) .accordion__button-wrapper {
+    padding: 24px 0 23px;
+  }
+
   .accordion__title {
     font-size: 22px;
-    line-height: 22px;
+    line-height: 21px;
+    letter-spacing: 0.22px;
   }
 
   .accordion__description {
+    width: 570px;
     padding: 10px 0 22px;
+  }
+
+  .accordion__description p {
+    letter-spacing: 0;
+  }
+
+  .accordion__description p br {
+    display: none;
   }
 
   .accordion__element.is-active .accordion__button-wrapper {
@@ -178,6 +206,10 @@
 
 .accordion__element.is-active .accordion__button-wrapper {
   padding-bottom: 4px;
+
+  @include vp-1365 {
+    padding-bottom: 0;
+  }
 }
 
 .accordion__element.is-active .accordion__button {
@@ -190,9 +222,7 @@
   display: none;
 }
 
-.accordion__description p br {
-  display: block;
-}
+
 
 .accordion__title br {
   display: none;
