--- a/source/sass/blocks/discounts-card.scss
+++ b/source/sass/blocks/discounts-card.scss
@@ -15,11 +15,11 @@
       margin-top: 5px;
 
       .discounts-card__title {
-        margin: 0;
-        font-family: $font-roboto-light;
+        margin: 0 0 0 0;
+        font-family: $font-roboto;
         font-size: 25px;
         line-height: 32px;
-        letter-spacing: 0.9px;
+        letter-spacing: 0.65px;
       }
 
       .discounts-card__content {
@@ -28,6 +28,7 @@
     }
 
     &:first-of-type {
+      grid-template-columns: 278px 400px;
       grid-column: 1/3;
       grid-row: 1/2;
     }
@@ -37,10 +38,10 @@
 
       .discounts-card__title {
         margin: 0;
-        font-family: $font-roboto-light;
+        font-family: $font-roboto;
         font-size: 25px;
         line-height: 32px;
-        letter-spacing: 0.9px;
+        letter-spacing: 0.75px;;
       }
 
       .discounts-card__content {
@@ -126,6 +127,8 @@
     line-height: 24px;
 
     @include vp-1365 {
+      font-family: $font-roboto-light;
+      letter-spacing: 0.02px;
       width: 191px;
       margin: 12px 0 122px 0;
       padding-bottom: 0;
@@ -140,14 +143,13 @@
   .discounts-card__button {
     color: $color-default-white;
 
-
     @include vp-1365 {
-      min-width: 74px;
-      margin-top: 0;
+      min-width: 73px;
+      margin: 0 0 0 1px;
       padding: 9px 0 7px;
       font-size: 12px;
       line-height: 12px;
-      letter-spacing: 1.25px;
+      letter-spacing: 1.2px;
     }
 
     @include vp-767 {
@@ -203,6 +205,7 @@
 
   @include vp-1365 {
     margin: 0 0 0 1px;
+    font-family: $font-roboto;
     font-size: 22px;
     line-height: 30px;
     letter-spacing: 1.25px;
@@ -329,11 +332,11 @@
   }
 
   @include vp-1365 {
-    min-width: 74px;
+    min-width: 73px;
     padding: 9px 0 7px;
     font-size: 12px;
     line-height: 12px;
-    letter-spacing: 1.25px;
+    letter-spacing: 1.2px;
   }
 
   @include vp-767 {
