--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -15,14 +15,13 @@
   margin-bottom: 50px;
 
   @include vp-1365 {
+    letter-spacing: 0.05px;
     text-align: center;
     margin-bottom: 44px;
   }
 
   @include vp-767 {
     margin-bottom: 34px;
-
-    // letter-spacing: 1px;
   }
 }
 
@@ -32,7 +31,7 @@
   gap: 40px;
 
   @include vp-1365 {
-    gap: 46px;
+    gap: 45px;
   }
 
   @include vp-767 {
@@ -85,7 +84,7 @@
 .faq__button {
   max-width: none;
   padding: 21px 20px 16px;
-  font-family: $font-roboto-light;
+  font-family: $font-roboto;
   text-align: center;
   font-size: 18px;
   font-weight: 400;
@@ -104,6 +103,8 @@
 
   @include vp-1365 {
     width: 100%;
+    padding: 19px 20px 18px;
+    letter-spacing: 0;
   }
 
   @include vp-767 {
@@ -119,4 +120,9 @@
   background-color: $color-main;
   background-image: $gradient;
   box-shadow: none;
+
+  @include vp-1365 {
+    padding: 19px 20px 18px;
+    letter-spacing: 0;
+  }
 }
