--- a/source/sass/blocks/contacts-card.scss
+++ b/source/sass/blocks/contacts-card.scss
@@ -3,7 +3,7 @@
     margin-top: 14px;
 
     @include vp-1365 {
-      margin-top: 15px;
+      margin-top: 13px;
     }
 
     @include vp-767 {
@@ -19,9 +19,9 @@
   line-height: 24px;
 
   @include vp-1365 {
-    font-size: 22px;
+    font-size: 24px;
     margin: 0 0 6px;
-    letter-spacing: 0.95px;
+    letter-spacing: -0.1px;
   }
 
   @include vp-767 {
@@ -35,4 +35,8 @@
   margin: 0;
   font-size: 14px;
   line-height: 22px;
+
+  @include vp-1365 {
+    letter-spacing: -0.05px;
+  }
 }
