--- a/source/sass/blocks/free.scss
+++ b/source/sass/blocks/free.scss
@@ -54,6 +54,11 @@
   grid-column: 1 / -1;
   max-width: none;
   padding: 28px 20px 25px;
+  font-family: $font-roboto-bold;
+
+  @include vp-1365 {
+    font-size: 12px;
+  }
 
   @include vp-767 {
     padding: 24px 20px 23px;
