--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -47,7 +47,7 @@
 
   @include vp-767 {
     display: block;
-    width: 100%;
+    width: 290px;
   }
 }
 
@@ -65,7 +65,7 @@
   }
 
   @include vp-767 {
-    gap: 14px 0;
+    gap: 11px 0;
     padding-top: 39px;
   }
 }
@@ -132,7 +132,7 @@
   }
 
   @include vp-767 {
-    margin-right: 0;
+    margin-right: 13px;
     padding: 0;
     line-height: 20px;
   }
