--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -10,7 +10,8 @@
   }
 
   @include vp-767 {
-    padding: 13px 0 24px;
+    padding: 13px 0 23px;
+    align-items: flex-start;
   }
 }
 
@@ -52,9 +53,9 @@
 }
 
 .main-nav__tel {
-  font-family: $font-roboto;
+  font-family: $font-roboto-bold;
   font-size: 26px;
-  font-weight: 700;
+  font-weight: 600;
   text-decoration: none;
   line-height: 30px;
   letter-spacing: 0.65px;
@@ -64,16 +65,16 @@
 
 
   @include vp-1365 {
-    font-size: 22px;
-    line-height: 25px;
+    font-size: 24px;
+    line-height: 24px;
     letter-spacing: 1.3px;
     margin: 0;
   }
 
   @include vp-767 {
     font-size: 22px;
-    line-height: 25px;
-    letter-spacing: 0.5px;
+    line-height: 27px;
+    letter-spacing: 0;
     margin: 0 1px 0 0;
   }
 
