--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -24,7 +24,7 @@
   }
 
   @include vp-767 {
-    margin: 0 0 6px;
+    margin: 0 0 5px;
   }
 }
 
@@ -72,7 +72,7 @@
     letter-spacing: 0.5px;
 
     @include vp-767 {
-      letter-spacing: 0;
+      letter-spacing: 0.25px;
     }
   }
 
@@ -114,7 +114,7 @@
     }
 
     @include vp-767 {
-      padding-bottom: 39px;
+      padding: 22px 25px 39px;
     }
   }
 
@@ -163,7 +163,30 @@
     gap: 0;
 
     &:nth-last-child(-n + 2) > :nth-child(2n) > :first-child {
-      margin: 11px 0 0;
+      margin: 10px auto 0;
+    }
+
+    &:nth-last-child(-n + 2) > :nth-child(2n) > :last-child {
+      margin: 2px auto 0;
+    }
+
+    &:nth-child(4n) > .advantages__number > span:first-child {
+      margin: 7px 0 0 0;
+    }
+    &:nth-child(4n) > .advantages__number > span:last-child {
+      margin: 1px 0 0 0;
+    }
+
+    &:nth-child(5n) > .advantages__number > span:first-child {
+      margin: 8px 0 0 0;
+    }
+
+    &:nth-child(5n) > .advantages__content > .advantages__title-card {
+      margin: 11px auto 0;
+    }
+
+    &:nth-child(5n) > .advantages__content > .advantages__description {
+      margin: 3px auto 0;
     }
   }
 }
@@ -190,7 +213,7 @@
 
   @include vp-767 {
     line-height: 20px;
-    margin: 3px 0 0;
+    margin: 0 0 0;
   }
 
   &:first-child {
@@ -209,10 +232,10 @@
 
     @include vp-767 {
       text-align: center;
-      font-size: 62px;
-      line-height: 60px;
+      font-size: 64px;
+      line-height: 64px;
       margin: 8px 0 0;
-      letter-spacing: 1.55px;
+      letter-spacing: 0;
     }
   }
 }
@@ -249,7 +272,7 @@
   }
 
   @include vp-767 {
-    margin: 10px 0 0;
+    margin: 10px auto 0;
     font-size: 18px;
     line-height: 22px;
     letter-spacing: 0.25px;
@@ -269,7 +292,7 @@
   }
 
   @include vp-767 {
-    margin: 3px auto 0;
+    margin: 2px auto 0;
     font-size: 14px;
     line-height: 22px;
   }
@@ -353,9 +376,9 @@
 
     .advantages__number span {
       &:first-child {
-        font-size: 62px;
-        line-height: 65px;
-        letter-spacing: 2px;
+        font-size: 64px;
+        line-height: 64px;
+        letter-spacing: 0;
       }
     }
 
@@ -364,11 +387,11 @@
       margin: 6px 0 0;
       font-size: 22px;
       line-height: 22px;
-      letter-spacing: 0.25px;
+      letter-spacing: 0;
     }
 
     .advantages__description {
-      margin: 20px auto 0;
+      margin: -4px auto 0;
       width: 190px;
       line-height: 22px;
     }
