--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -1,5 +1,6 @@
 .card__title {
   margin: 0 0 15px;
+  font-family: $font-roboto-bold;
   font-size: 26px;
   font-weight: 700;
   line-height: 29px;
@@ -13,7 +14,7 @@
   }
 
   @include vp-767 {
-    margin: 0 0 8px;
+    margin: 0 0 17px;
     font-size: 22px;
     line-height: 24px;
   }
@@ -30,7 +31,7 @@
   }
 
   @include vp-767 {
-    margin: 0 0 55px;
+    margin: 0 0 75px;
     font-size: 14px;
     line-height: 22px;
   }
@@ -46,7 +47,7 @@
   }
 
   @include vp-767 {
-    margin: 0 0 30px;
+    margin: 0 0 27px;
   }
 }
 
@@ -58,6 +59,7 @@
   margin: 0 auto;
   position: relative;
   z-index: 1;
+  font-family: $font-roboto-bold;
   font-size: 62px;
   font-weight: 600;
   line-height: 64px;
@@ -69,7 +71,7 @@
   }
 
   @include vp-767 {
-    gap: 18px;
+    gap: 12px;
   }
 
   .card__price-count {
@@ -83,7 +85,8 @@
     }
 
     @include vp-767 {
-      letter-spacing: -1.75px;
+      font-size: 48px;
+      letter-spacing: 0.1px;
     }
   }
 
@@ -97,8 +100,13 @@
     line-height: 48px;
 
     .card__price-rub {
-      font-size: 36px;
-      line-height: 36px;
+      margin: 4px 0 0 0;
+      width: 24px;
+
+      svg {
+
+        width: 100%;
+      }
     }
   }
 }
@@ -122,7 +130,7 @@
   @include vp-767 {
     font-size: 80px;
     line-height: 80px;
-    bottom: -10px;
+    bottom: 11px;
   }
 }
 
