--- a/source/sass/blocks/filter-list.scss
+++ b/source/sass/blocks/filter-list.scss
@@ -23,8 +23,8 @@
 
   @include vp-767 {
     width: 290px;
-    margin: 20px auto 34px;
-    padding-bottom: 13px;
+    margin: 20px auto 30px;
+    padding: 0 0 2px 0;
 
     &::before {
       top: 33px;
