--- a/source/sass/blocks/judges-card.scss
+++ b/source/sass/blocks/judges-card.scss
@@ -62,7 +62,10 @@
   letter-spacing: 0.25px;
 
   @include vp-767 {
+    font-family: $font-roboto;
+    font-size: 20px;
     padding: 25px 15px;
+    letter-spacing: 0.85px;
   }
 }
 
