--- a/source/sass/blocks/judges.scss
+++ b/source/sass/blocks/judges.scss
@@ -6,7 +6,7 @@
   }
 
   @include vp-767 {
-    padding: 36px 0 40px;
+    padding: 40px 0 40px;
   }
 }
 
@@ -26,10 +26,9 @@
   }
 
   @include vp-767 {
-    margin: 0 auto 19px;
-    font-size: 32px;
-
-    // letter-spacing: -0.5px;
+    margin: 0 auto 20px;
+    font-size: 33px;
+    letter-spacing: 0;
   }
 }
 
