--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -125,4 +125,9 @@
     padding: 19px 20px 18px;
     letter-spacing: 0;
   }
+
+  @include vp-767 {
+    padding: 14px 20px 14px;
+    letter-spacing: 0;
+  }
 }
