--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -77,7 +77,7 @@
   .card__price-count {
     font-family: $font-roboto-bold;
     letter-spacing: -1.75px;
-    margin: 1px 0 0 0;
+    margin: 1px 0 0;
 
     @include vp-1365 {
       letter-spacing: -1.55px;
@@ -100,11 +100,10 @@
     line-height: 48px;
 
     .card__price-rub {
-      margin: 4px 0 0 0;
+      margin: 4px 0 0;
       width: 24px;
 
       svg {
-
         width: 100%;
       }
     }
