--- a/source/sass/blocks/discounts-card.scss
+++ b/source/sass/blocks/discounts-card.scss
@@ -15,7 +15,7 @@
       margin-top: 5px;
 
       .discounts-card__title {
-        margin: 0 0 0 0;
+        margin: 0;
         font-family: $font-roboto;
         font-size: 25px;
         line-height: 32px;
@@ -41,7 +41,7 @@
         font-family: $font-roboto;
         font-size: 25px;
         line-height: 32px;
-        letter-spacing: 0.75px;;
+        letter-spacing: 0.75px;
       }
 
       .discounts-card__content {
@@ -63,7 +63,6 @@
       margin-top: 0;
       display: flex;
       width: 320px;
-      margin: 0 auto;
       flex-direction: column;
       flex-wrap: wrap;
       justify-content: start;
@@ -156,7 +155,7 @@
       font-family: $font-roboto-light;
       letter-spacing: 0.02px;
       width: 191px;
-      margin: 12px 0 122px 0;
+      margin: 12px 0 122px;
       padding-bottom: 0;
     }
 
@@ -240,8 +239,6 @@
     font-size: 22px;
     line-height: 30px;
     letter-spacing: 1.25px;
-
-
   }
 
   @include vp-767 {
