--- a/source/sass/blocks/games.scss
+++ b/source/sass/blocks/games.scss
@@ -62,7 +62,7 @@
   }
 
   @include vp-1365 {
-    margin: 0 0 0 0;
+    margin: 0;
     font-size: 46px;
     line-height: 54px;
     letter-spacing: 0.95px;
@@ -139,7 +139,7 @@
   }
 
   @include vp-1365 {
-    margin: 0 0 0;
+    margin: 0;
   }
 
   @include vp-767 {
